3_expose_http_service/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: workshop-demo
  name: workshop-demo
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
    - name: grpc
      port: 50051
      protocol: TCP
      targetPort: 50051
  selector:
    app: workshop-demo
